--- a/Pages/Dashboard 1/index.html
+++ b/Pages/Dashboard 1/index.html
@@ -68,6 +68,7 @@
                         <img
                           class="order-completed"
                           src="img/order-completed.png"
+                          alt="new"
                         />
                       </div>
                     </div>
@@ -87,7 +88,7 @@
                   <div class="chart">
                     <div class="overlap-3">
                       <div class="month">
-                        <img class="line" src="img/line.png" />
+                        <img class="line" src="img/line.png" alt="new" />
                         <div class="month-2">
                           <div class="text-wrapper-8">Jan</div>
                           <div class="text-wrapper-8">Feb</div>
@@ -146,7 +147,7 @@
                             <img class="img-2" src="img/user-4.svg" alt="new" />
                           </div>
                         </div>
-                        <img class="menu" src="img/menu-4.png" />
+                        <img class="menu" src="img/menu-4.png" alt="new" />
                       </div>
                     </div>
                     <div class="overlap-group-wrapper">
@@ -160,7 +161,7 @@
                             <img class="img-2" src="img/user-4.svg" alt="new" />
                           </div>
                         </div>
-                        <img class="menu" src="img/menu-4.png" />
+                        <img class="menu" src="img/menu-4.png" alt="new" />
                       </div>
                     </div>
                     <div class="overlap-group-wrapper">
@@ -174,7 +175,7 @@
                             <img class="img-2" src="img/user-4.svg" alt="new" />
                           </div>
                         </div>
-                        <img class="menu" src="img/menu-4.png" />
+                        <img class="menu" src="img/menu-4.png" alt="new" />
                       </div>
                     </div>
                     <div class="overlap-group-wrapper">
@@ -188,7 +189,7 @@
                             <img class="img-2" src="img/user-4.svg" alt="new" />
                           </div>
                         </div>
-                        <img class="menu" src="img/menu-4.png" />
+                        <img class="menu" src="img/menu-4.png" alt="new" />
                       </div>
                     </div>
                     <div class="overlap-group-wrapper">
@@ -202,7 +203,7 @@
                             <img class="img-2" src="img/user-4.svg" alt="new" />
                           </div>
                         </div>
-                        <img class="menu" src="img/menu-4.png" />
+                        <img class="menu" src="img/menu-4.png" alt="new" />
                       </div>
                     </div>
                   </div>
