--- a/Pages/Home-Admin/index.html
+++ b/Pages/Home-Admin/index.html
@@ -83,13 +83,17 @@
                 </div>
               </div>
             </div>
-            <img class="image" src="img/image-2.png" />
+            <img class="image" src="img/image-2.png" alt="new" />
           </div>
         </footer>
         <div class="overlap-2">
           <div class="why-choose-us">
             <img class="pattern-5" src="img/pattern.svg" alt="new" />
-            <img class="unsplash-MD" src="img/unsplash-md-ha01bk7c.png" />
+            <img
+              class="unsplash-MD"
+              src="img/unsplash-md-ha01bk7c.png"
+              alt="new"
+            />
           </div>
           <div class="project">
             <img class="background-2" src="img/background-3.svg" alt="new" />
@@ -100,7 +104,11 @@
           <div class="about">
             <div class="overlap-wrapper">
               <div class="overlap-3">
-                <img class="background-3" src="img/background-2.png" />
+                <img
+                  class="background-3"
+                  src="img/background-2.png"
+                  alt="new"
+                />
                 <div class="overlap-group-wrapper">
                   <div class="overlap-4">
                     <div class="background-4"></div>
@@ -131,8 +139,12 @@
                       </div>
                       <div class="images">
                         <div class="overlap-group-2">
-                          <img class="image-2" src="img/image-1.png" />
-                          <img class="image-3" src="img/image.png" />
+                          <img
+                            class="image-2"
+                            src="img/image-1.png"
+                            alt="new"
+                          />
+                          <img class="image-3" src="img/image.png" alt="new" />
                         </div>
                       </div>
                     </div>
@@ -210,15 +222,16 @@
               <img
                 class="icon-park-solid-time"
                 src="img/icon-park-solid-time.png"
+                alt="new"
               />
             </div>
-            <img class="mask-group" src="img/mask-group.png" />
+            <img class="mask-group" src="img/mask-group.png" alt="new" />
           </div>
           <img class="tdesign-money" src="img/tdesign-money.svg" alt="new" />
           <div class="content-7">
             <div class="image-4">
               <div class="img-wrapper">
-                <img class="text-7" src="img/text.png" />
+                <img class="text-7" src="img/text.png" alt="new" />
               </div>
               <div class="element-4">
                 <div class="text-8">
@@ -245,7 +258,7 @@
                 </div>
               </div>
             </div>
-            <img class="rectangle" src="img/rectangle-31.png" />
+            <img class="rectangle" src="img/rectangle-31.png" alt="new" />
           </div>
           <div class="text-wrapper-18">Crafting Moments, Creating Memories</div>
         </div>
@@ -281,7 +294,7 @@
               <div class="review">
                 <div class="user-2">
                   <div class="user-3">
-                    <img class="user-4" src="img/user-1.png" />
+                    <img class="user-4" src="img/user-1.png" alt="new" />
                     <div class="name-2">
                       <div class="text-wrapper-20">Kathleen Smith</div>
                       <div class="text-wrapper-21">From Germany</div>
@@ -315,7 +328,7 @@
               <div class="review">
                 <div class="user-2">
                   <div class="user-3">
-                    <img class="user-4" src="img/user.png" />
+                    <img class="user-4" src="img/user.png" alt="new" />
                     <div class="name-2">
                       <div class="text-wrapper-15">John Martin</div>
                       <div class="text-wrapper-22">From Russia</div>
