--- a/Pages/Home/index.html
+++ b/Pages/Home/index.html
@@ -89,7 +89,7 @@
                 </div>
               </div>
             </div>
-            <img class="image" src="img/image-2.png" alt="image" />
+            <img class="image" src="img/image-2.png" alt="new" alt="image" />
           </div>
         </footer>
         <div class="overlap-2">
@@ -103,6 +103,7 @@
             <img
               class="unsplash-MD"
               src="img/unsplash-md-ha01bk7c.png"
+              alt="new"
               alt="image"
             />
           </div>
@@ -123,6 +124,7 @@
                 <img
                   class="background-3"
                   src="img/background-2.png"
+                  alt="new"
                   alt="image"
                 />
                 <div class="overlap-group-wrapper">
@@ -155,8 +157,12 @@
                       </div>
                       <div class="images">
                         <div class="overlap-group-2">
-                          <img class="image-2" src="img/image-1.png" />
-                          <img class="image-3" src="img/image.png" />
+                          <img
+                            class="image-2"
+                            src="img/image-1.png"
+                            alt="new"
+                          />
+                          <img class="image-3" src="img/image.png" alt="new" />
                         </div>
                       </div>
                     </div>
@@ -234,15 +240,16 @@
               <img
                 class="icon-park-solid-time"
                 src="img/icon-park-solid-time.png"
+                alt="new"
               />
             </div>
-            <img class="mask-group" src="img/mask-group.png" />
+            <img class="mask-group" src="img/mask-group.png" alt="new" />
           </div>
           <img class="tdesign-money" src="img/tdesign-money.svg" alt="new" />
           <div class="content-7">
             <div class="image-4">
               <div class="img-wrapper">
-                <img class="text-7" src="img/text.png" />
+                <img class="text-7" src="img/text.png" alt="new" />
               </div>
               <div class="element-4">
                 <div class="text-8">
@@ -269,7 +276,7 @@
                 </div>
               </div>
             </div>
-            <img class="rectangle" src="img/rectangle-31.png" />
+            <img class="rectangle" src="img/rectangle-31.png" alt="new" />
           </div>
           <div class="text-wrapper-18">Crafting Moments, Creating Memories</div>
         </div>
@@ -305,7 +312,7 @@
               <div class="review">
                 <div class="user-2">
                   <div class="user-3">
-                    <img class="user-4" src="img/user-1.png" />
+                    <img class="user-4" src="img/user-1.png" alt="new" />
                     <div class="name-2">
                       <div class="text-wrapper-20">Kathleen Smith</div>
                       <div class="text-wrapper-21">From Germany</div>
@@ -339,7 +346,7 @@
               <div class="review">
                 <div class="user-2">
                   <div class="user-3">
-                    <img class="user-4" src="img/user.png" />
+                    <img class="user-4" src="img/user.png" alt="new" />
                     <div class="name-2">
                       <div class="text-wrapper-15">John Martin</div>
                       <div class="text-wrapper-22">From Russia</div>
