--- a/Pages/Key Offerings/index.html
+++ b/Pages/Key Offerings/index.html
@@ -180,7 +180,7 @@
                               alt="new"
                             />
                           </div>
-                          <img class="icon-4" src="img/icon-2.png" />
+                          <img class="icon-4" src="img/icon-2.png" alt="new" />
                         </div>
                       </div>
                     </div>
@@ -214,9 +214,13 @@
                               alt="new"
                             />
                           </div>
-                          <img class="icon-7" src="img/icon-1.png" />
+                          <img class="icon-7" src="img/icon-1.png" alt="new" />
                         </div>
-                        <img class="vector-5" src="img/vector-14.png" />
+                        <img
+                          class="vector-5"
+                          src="img/vector-14.png"
+                          alt="new"
+                        />
                       </div>
                     </div>
                     <div class="text-wrapper-15">Vendor Marketplace</div>
@@ -247,7 +251,7 @@
                             alt="new"
                           />
                           <div class="ellipse-8"></div>
-                          <img class="icon-10" src="img/icon.png" />
+                          <img class="icon-10" src="img/icon.png" alt="new" />
                         </div>
                       </div>
                     </div>
@@ -464,7 +468,7 @@
                 </div>
               </div>
             </div>
-            <img class="image" src="img/image.png" />
+            <img class="image" src="img/image.png" alt="new" />
           </div>
         </footer>
       </div>
