--- a/Pages/Pricing/index.html
+++ b/Pages/Pricing/index.html
@@ -42,7 +42,7 @@
                 <div class="review">
                   <div class="user-2">
                     <div class="user-3">
-                      <img class="user-4" src="img/user-1.png" />
+                      <img class="user-4" src="img/user-1.png" alt="new" />
                       <div class="name">
                         <div class="text-wrapper-3">Kathleen Smith</div>
                         <div class="text-wrapper-4">From Germany</div>
@@ -76,7 +76,7 @@
                 <div class="review">
                   <div class="user-2">
                     <div class="user-3">
-                      <img class="user-4" src="img/user.png" />
+                      <img class="user-4" src="img/user.png" alt="new" />
                       <div class="name">
                         <div class="text-wrapper-5">John Martin</div>
                         <div class="text-wrapper-6">From Russia</div>
@@ -354,7 +354,7 @@
                 </div>
               </div>
             </div>
-            <img class="image-2" src="img/image-1.png" />
+            <img class="image-2" src="img/image-1.png" alt="new" />
           </div>
         </footer>
         <div class="banner">
