--- a/Pages/UserType/index.html
+++ b/Pages/UserType/index.html
@@ -17,7 +17,7 @@
               <div class="text-wrapper">Party Planner</div>
               <div class="logo-header">
                 <div class="logo">
-                  <img class="party-PRO" src="img/partypro.png" />
+                  <img class="party-PRO" src="img/partypro.png" alt="new" />
                   <div class="pattern"></div>
                   <div class="pattern-2"></div>
                   <div class="pattern-3"></div>
@@ -27,6 +27,7 @@
               <img
                 class="friends-celebrating"
                 src="img/friends-celebrating-christmas-at-party.png"
+                alt="new"
               />
             </div>
             <div class="overlap-2">
@@ -34,6 +35,7 @@
               <img
                 class="woman-connects-a"
                 src="img/woman-connects-a-laptop-to-the-server.png"
+                alt="new"
               />
             </div>
           </div>
