--- a/Pages/about us/index.html
+++ b/Pages/about us/index.html
@@ -137,7 +137,7 @@
                 </div>
               </div>
             </div>
-            <img class="image" src="img/image.png" />
+            <img class="image" src="img/image.png" alt="new" />
           </div>
         </footer>
         <div class="quotes">
@@ -152,7 +152,7 @@
                 <div class="text-wrapper-11">CEO, PartyPRO</div>
               </div>
             </div>
-            <img class="pattern-6" src="img/pattern.png" />
+            <img class="pattern-6" src="img/pattern.png" alt="new" />
           </div>
         </div>
         <div class="heading">
