--- a/Pages/help/index.html
+++ b/Pages/help/index.html
@@ -58,7 +58,7 @@
               <div class="text-wrapper-5">Project related questions</div>
             </div>
             <div class="div-2">
-              <img class="image" src="img/image-2.png" />
+              <img class="image" src="img/image-2.png" alt="new" />
               <div class="content">
                 <div class="element">
                   <div class="title">
@@ -68,7 +68,7 @@
                         process?
                       </p>
                     </div>
-                    <img class="img" src="img/5.png" />
+                    <img class="img" src="img/5.png" alt="new" />
                   </div>
                   <img class="line-2" src="img/line-7.svg" alt="new" />
                 </div>
@@ -80,7 +80,7 @@
                           How do I start planning my party?
                         </p>
                       </div>
-                      <img class="img-2" src="img/8.png" />
+                      <img class="img-2" src="img/8.png" alt="new" />
                     </div>
                     <p class="text-wrapper-7">
                       We recommend starting by determining the date, budget, and
@@ -98,7 +98,7 @@
                         planning a party?
                       </p>
                     </div>
-                    <img class="img-3" src="img/5.png" />
+                    <img class="img-3" src="img/5.png" alt="new" />
                   </div>
                   <img class="line-2" src="img/line-7.svg" alt="new" />
                 </div>
@@ -110,7 +110,7 @@
                         my party?
                       </p>
                     </div>
-                    <img class="img-4" src="img/5.png" />
+                    <img class="img-4" src="img/5.png" alt="new" />
                   </div>
                   <img class="line-2" src="img/line-7.svg" alt="new" />
                 </div>
@@ -120,7 +120,7 @@
                       What are some fun and interactive activities <br />I can
                       incorporate?
                     </p>
-                    <img class="img-5" src="img/5.png" />
+                    <img class="img-5" src="img/5.png" alt="new" />
                   </div>
                   <img class="line-2" src="img/line-7.svg" alt="new" />
                 </div>
@@ -146,7 +146,7 @@
                         my event?
                       </p>
                     </div>
-                    <img class="img-6" src="img/2x.png" />
+                    <img class="img-6" src="img/2x.png" alt="new" />
                   </div>
                   <img class="line-2" src="img/line-2.svg" alt="new" />
                 </div>
@@ -158,7 +158,7 @@
                           What types of events do you specialize in planning?
                         </p>
                       </div>
-                      <img class="img-7" src="img/3.png" />
+                      <img class="img-7" src="img/3.png" alt="new" />
                     </div>
                     <p class="text-wrapper-7">
                       We specialize in planning a wide range of events,
@@ -178,7 +178,7 @@
                         process?
                       </p>
                     </div>
-                    <img class="img-8" src="img/2x.png" />
+                    <img class="img-8" src="img/2x.png" alt="new" />
                   </div>
                   <img class="line-2" src="img/line-2.svg" alt="new" />
                 </div>
@@ -190,7 +190,7 @@
                         <br />services are included?
                       </p>
                     </div>
-                    <img class="img-9" src="img/2x.png" />
+                    <img class="img-9" src="img/2x.png" alt="new" />
                   </div>
                   <img class="line-2" src="img/line-2.svg" alt="new" />
                 </div>
@@ -200,12 +200,12 @@
                       What is your policy on cancellations or <br />rescheduling
                       of events?
                     </p>
-                    <img class="img-8" src="img/2x.png" />
+                    <img class="img-8" src="img/2x.png" alt="new" />
                   </div>
                   <img class="line-2" src="img/line-2.svg" alt="new" />
                 </div>
               </div>
-              <img class="image" src="img/image-1.png" />
+              <img class="image" src="img/image-1.png" alt="new" />
             </div>
           </div>
         </div>
@@ -286,7 +286,7 @@
                 </div>
               </div>
             </div>
-            <img class="image-2" src="img/image.png" />
+            <img class="image-2" src="img/image.png" alt="new" />
           </div>
         </footer>
         <div class="form-wrapper">
