--- a/Pages/my projects/index.html
+++ b/Pages/my projects/index.html
@@ -11,7 +11,7 @@
       <div class="div">
         <div class="text-wrapper">My Projects</div>
         <div class="overlap">
-          <img class="rectangle" src="img/rectangle-32.png" />
+          <img class="rectangle" src="img/rectangle-32.png" alt="new" />
           <div class="text-wrapper-2">Graduation Party</div>
           <div class="frame">
             <div class="text-wrapper-3">$8</div>
@@ -22,7 +22,7 @@
           <div class="div-wrapper">
             <div class="text-wrapper-7">View party details</div>
           </div>
-          <img class="group" src="img/group-5.png" />
+          <img class="group" src="img/group-5.png" alt="new" />
           <div class="frame-2">
             <div class="text-wrapper-8">Non refundable</div>
             <p class="p">Date: Sunday, March 18, 2022</p>
@@ -147,7 +147,7 @@
                 </div>
               </div>
             </div>
-            <img class="image" src="img/image.png" />
+            <img class="image" src="img/image.png" alt="new" />
           </div>
         </footer>
       </div>
