--- a/Pages/planing1/index.html
+++ b/Pages/planing1/index.html
@@ -53,28 +53,28 @@
         </div>
         <div class="overlap">
           <div class="overlap-group">
-            <img class="img" src="img/schedule-1.png" />
+            <img class="img" src="img/schedule-1.png" alt="new" />
           </div>
           <div class="paint-palette-wrapper">
-            <img class="img-2" src="img/paint-palette.png" />
+            <img class="img-2" src="img/paint-palette.png" alt="new" />
           </div>
           <div class="arena-wrapper">
-            <img class="arena" src="img/arena.png" />
+            <img class="arena" src="img/arena.png" alt="new" />
           </div>
           <div class="inquiry-wrapper">
-            <img class="inquiry" src="img/inquiry.png" />
+            <img class="inquiry" src="img/inquiry.png" alt="new" />
           </div>
           <div class="love-mail-wrapper">
-            <img class="img" src="img/love-mail.png" />
+            <img class="img" src="img/love-mail.png" alt="new" />
           </div>
           <div class="pass-fail-wrapper">
-            <img class="img-2" src="img/pass-fail.png" />
+            <img class="img-2" src="img/pass-fail.png" alt="new" />
           </div>
           <div class="shredder-wrapper">
-            <img class="img-2" src="img/shredder.png" />
+            <img class="img-2" src="img/shredder.png" alt="new" />
           </div>
           <div class="neutral-decision-wrapper">
-            <img class="img-2" src="img/neutral-decision.png" />
+            <img class="img-2" src="img/neutral-decision.png" alt="new" />
           </div>
           <div class="text-wrapper-5">Step 01</div>
           <p class="choose-time-date-no">Date, Time, Venue, No of Guests</p>
@@ -171,7 +171,7 @@
                 </div>
               </div>
             </div>
-            <img class="image" src="img/image.png" />
+            <img class="image" src="img/image.png" alt="new" />
           </div>
         </footer>
         <div class="button-row">
@@ -214,8 +214,8 @@
             </div>
             <button class="button-3"><div class="label-3">Done</div></button>
           </div>
-          <img class="clock" src="img/clock.png" />
-          <img class="schedule" src="img/schedule.png" />
+          <img class="clock" src="img/clock.png" alt="new" />
+          <img class="schedule" src="img/schedule.png" alt="new" />
         </div>
       </div>
     </div>
