--- a/Pages/404-Page/index.html
+++ b/Pages/404-Page/index.html
@@ -10,8 +10,8 @@
     <div class="element">
       <div class="overlap-wrapper">
         <div class="overlap">
-          <img class="background" src="img/background.png" />
-          <img class="banner" src="img/banner.png" />
+          <img class="background" src="img/background.png" alt="new" />
+          <img class="banner" src="img/banner.png" alt="new" />
           <div class="header">
             <div class="overlap-group">
               <div class="logo-header-wrapper">
