--- a/Pages/Checkout/index.html
+++ b/Pages/Checkout/index.html
@@ -64,10 +64,10 @@
           <div class="rectangle-7"></div>
           <div class="rectangle-8"></div>
           <div class="rectangle-9"></div>
-          <img class="image" src="img/image-6.png" />
-          <img class="image-2" src="img/image-7.png" />
-          <img class="image-3" src="img/image-8.png" />
-          <img class="image-4" src="img/image-10.png" />
+          <img class="image" src="img/image-6.png" alt="new" />
+          <img class="image-2" src="img/image-7.png" alt="new" />
+          <img class="image-3" src="img/image-8.png" alt="new" />
+          <img class="image-4" src="img/image-10.png" alt="new" />
         </div>
         <div class="overlap-group">
           <div class="rectangle-10"></div>
@@ -174,7 +174,7 @@
                   </div>
                 </div>
               </div>
-              <img class="image-5" src="img/image.png" />
+              <img class="image-5" src="img/image.png" alt="new" />
             </div>
           </footer>
         </div>
@@ -239,7 +239,7 @@
             <div class="text-wrapper-2">Email address</div>
           </div>
           <div class="frame-11">
-            <img class="image-6" src="img/image-5.png" />
+            <img class="image-6" src="img/image-5.png" alt="new" />
             <div class="text-wrapper-26">+61</div>
             <img class="arrow-down" src="img/arrow-down-1-2.svg" alt="new" />
           </div>
@@ -256,14 +256,14 @@
           <p class="text-wrapper-30">Receive text alerts about this trip.</p>
         </div>
         <div class="overlap-6">
-          <img class="rectangle-14" src="img/rectangle-68.png" />
+          <img class="rectangle-14" src="img/rectangle-68.png" alt="new" />
           <div class="non-refundable-wrapper">
             <div class="non-refundable">&nbsp;&nbsp; Non refundable</div>
           </div>
           <div class="text-wrapper-31">Basic</div>
           <div class="group">
             <div class="text-wrapper-32">4.5 (1200 Reviews)</div>
-            <img class="group-2" src="img/group-5.png" />
+            <img class="group-2" src="img/group-5.png" alt="new" />
           </div>
         </div>
         <div class="overlap-7">
