--- a/Pages/HomePage-Ordinary_User/index.html
+++ b/Pages/HomePage-Ordinary_User/index.html
@@ -74,6 +74,7 @@
             class="unsplashmd-ha01bk7c-icon"
             alt=""
             src="./public/unsplashmd-ha01bk7c@2x.png"
+            alt="new"
           />
 
           <div class="iconamoonprofile-fill"></div>
@@ -177,6 +178,7 @@
                   loading="eager"
                   alt=""
                   src="./public/iconparksolidtime@2x.png"
+                  alt="new"
                 />
               </div>
             </div>
@@ -191,6 +193,7 @@
             class="background-icon2"
             alt=""
             src="./public/background-1@2x.png"
+            alt="new"
           />
 
           <div class="pattern5"></div>
@@ -207,7 +210,12 @@
               alt="new"
             />
 
-            <img class="images-icon" alt="" src="./public/images@2x.png" />
+            <img
+              class="images-icon"
+              alt=""
+              src="./public/images@2x.png"
+              alt="new"
+            />
           </div>
         </div>
         <div class="pattern-frame">
@@ -232,6 +240,7 @@
                 loading="eager"
                 alt=""
                 src="./public/1@2x.png"
+                alt="new"
               />
 
               <div class="text1">
@@ -245,6 +254,7 @@
                 loading="eager"
                 alt=""
                 src="./public/1-1@2x.png"
+                alt="new"
               />
 
               <div class="text2">
@@ -258,6 +268,7 @@
                 loading="eager"
                 alt=""
                 src="./public/1-2@2x.png"
+                alt="new"
               />
 
               <div class="step-03">STEP 03</div>
@@ -269,6 +280,7 @@
                 loading="eager"
                 alt=""
                 src="./public/1-3@2x.png"
+                alt="new"
               />
 
               <div class="step-04">STEP 04</div>
@@ -280,6 +292,7 @@
                 loading="eager"
                 alt=""
                 src="./public/1-4@2x.png"
+                alt="new"
               />
 
               <div class="step-05">STEP 05</div>
@@ -328,6 +341,7 @@
                         loading="eager"
                         alt=""
                         src="./public/user@2x.png"
+                        alt="new"
                       />
 
                       <div class="name1">
@@ -372,6 +386,7 @@
                         loading="eager"
                         alt=""
                         src="./public/user-1@2x.png"
+                        alt="new"
                       />
 
                       <div class="name2">
@@ -412,7 +427,7 @@
         </div>
       </section>
       <section class="review-frame2">
-        <img class="image-icon" alt="" src="./public/image@2x.png" />
+        <img class="image-icon" alt="" src="./public/image@2x.png" alt="new" />
 
         <div class="background-frame">
           <footer class="background2"></footer>
@@ -512,6 +527,7 @@
                           loading="eager"
                           alt=""
                           src="./public/follow@2x.png"
+                          alt="new"
                         />
                       </div>
                     </div>
