--- a/Pages/Vendors 1/index.html
+++ b/Pages/Vendors 1/index.html
@@ -10,7 +10,7 @@
     <div class="vendors">
       <div class="div">
         <div class="overlap">
-          <img class="rectangle" src="img/rectangle-2.png" />
+          <img class="rectangle" src="img/rectangle-2.png" alt="new" />
           <div class="rectangle-2"></div>
           <div class="frame"><div class="text-wrapper">Search</div></div>
           <div class="component">
@@ -29,7 +29,7 @@
         <div class="div-wrapper">
           <div class="text-wrapper-5">The Crystal Ballroom</div>
         </div>
-        <img class="img" src="img/rectangle-21.png" />
+        <img class="img" src="img/rectangle-21.png" alt="new" />
         <div class="frame-2"><div class="text-wrapper-6">PartyPulse</div></div>
         <div class="overlap-group">
           <p class="p">Top cities for Vegan Travellers</p>
@@ -120,24 +120,24 @@
                   </div>
                 </div>
               </div>
-              <img class="image" src="img/image.png" />
+              <img class="image" src="img/image.png" alt="new" />
             </div>
           </footer>
         </div>
         <div class="frame-3">
           <div class="text-wrapper-13">Riverside Manor</div>
         </div>
-        <img class="rectangle-3" src="img/rectangle-9.png" />
+        <img class="rectangle-3" src="img/rectangle-9.png" alt="new" />
         <div class="frame-4"><div class="text-wrapper-13">FunFizz</div></div>
         <div class="frame-5">
           <div class="text-wrapper-6">The Garden Pavilion</div>
         </div>
-        <img class="rectangle-4" src="img/rectangle-10.png" />
+        <img class="rectangle-4" src="img/rectangle-10.png" alt="new" />
         <div class="frame-6"><div class="text-wrapper-6">SparkSplash</div></div>
         <div class="frame-7">
           <div class="text-wrapper-6">Sunset Terrace Events</div>
         </div>
-        <img class="rectangle-5" src="img/rectangle-11.png" />
+        <img class="rectangle-5" src="img/rectangle-11.png" alt="new" />
         <div class="frame-8"><div class="text-wrapper-6">FestFusion</div></div>
         <div class="div-2">
           <div class="div-2">
@@ -181,49 +181,57 @@
             </div>
           </div>
         </div>
-        <img class="rectangle-6" src="img/rectangle-25.png" />
+        <img class="rectangle-6" src="img/rectangle-25.png" alt="new" />
         <div class="frame-9">
           <div class="text-wrapper-6">FlavorFiesta</div>
         </div>
-        <img class="rectangle-7" src="img/rectangle-26.png" />
+        <img class="rectangle-7" src="img/rectangle-26.png" alt="new" />
         <div class="frame-10">
           <div class="text-wrapper-13">DelishDash</div>
         </div>
-        <img class="rectangle-8" src="img/rectangle-27.png" />
+        <img class="rectangle-8" src="img/rectangle-27.png" alt="new" />
         <div class="frame-11"><div class="text-wrapper-6">CraveCraze</div></div>
-        <img class="rectangle-9" src="img/rectangle-28.png" />
+        <img class="rectangle-9" src="img/rectangle-28.png" alt="new" />
         <div class="frame-12">
           <div class="text-wrapper-6">SavorySparks</div>
         </div>
         <div class="text-wrapper-17">See more</div>
         <div class="text-wrapper-18">Florists</div>
-        <img class="rectangle-10" src="img/rectangle-29.png" />
+        <img class="rectangle-10" src="img/rectangle-29.png" alt="new" />
         <div class="frame-13"><div class="text-wrapper-6">PetalPatch</div></div>
-        <img class="rectangle-11" src="img/rectangle-30.png" />
+        <img class="rectangle-11" src="img/rectangle-30.png" alt="new" />
         <div class="frame-14"><div class="text-wrapper-13">BloomBud</div></div>
-        <img class="rectangle-12" src="img/rectangle-31.png" />
+        <img class="rectangle-12" src="img/rectangle-31.png" alt="new" />
         <div class="frame-15"><div class="text-wrapper-6">LilyLane</div></div>
-        <img class="rectangle-13" src="img/rectangle-32.png" />
+        <img class="rectangle-13" src="img/rectangle-32.png" alt="new" />
         <div class="frame-16"><div class="text-wrapper-6">FloralFête</div></div>
         <div class="text-wrapper-19">See more</div>
         <div class="text-wrapper-20">Event Planners</div>
-        <img class="rectangle-14" src="img/rectangle-33.png" />
+        <img class="rectangle-14" src="img/rectangle-33.png" alt="new" />
         <div class="frame-17"><div class="text-wrapper-6">PartyPros</div></div>
-        <img class="rectangle-15" src="img/rectangle-34.png" />
+        <img class="rectangle-15" src="img/rectangle-34.png" alt="new" />
         <div class="frame-18"><div class="text-wrapper-13">BashBliss</div></div>
-        <img class="rectangle-16" src="img/rectangle-35.png" />
+        <img class="rectangle-16" src="img/rectangle-35.png" alt="new" />
         <div class="frame-19"><div class="text-wrapper-6">EventEase</div></div>
-        <img class="rectangle-17" src="img/rectangle-36.png" />
+        <img class="rectangle-17" src="img/rectangle-36.png" alt="new" />
         <div class="frame-20">
           <div class="text-wrapper-6">GatherGenius</div>
         </div>
         <div class="text-wrapper-21">See more</div>
         <div class="text-wrapper-22">See more</div>
         <div class="text-wrapper-23">See more</div>
-        <img class="unsplash" src="img/unsplash-yqr43whocay.png" />
-        <img class="unsplash-XU" src="img/unsplash-imk2doz-xu.png" />
-        <img class="unsplash-idiucsynus" src="img/unsplash-idiucsynus4.png" />
-        <img class="unsplash-bwpfoulh" src="img/unsplash-bwp7fou2lh8.png" />
+        <img class="unsplash" src="img/unsplash-yqr43whocay.png" alt="new" />
+        <img class="unsplash-XU" src="img/unsplash-imk2doz-xu.png" alt="new" />
+        <img
+          class="unsplash-idiucsynus"
+          src="img/unsplash-idiucsynus4.png"
+          alt="new"
+        />
+        <img
+          class="unsplash-bwpfoulh"
+          src="img/unsplash-bwp7fou2lh8.png"
+          alt="new"
+        />
       </div>
     </div>
   </body>
