--- a/Pages/Vendors 2/index.html
+++ b/Pages/Vendors 2/index.html
@@ -32,17 +32,17 @@
           </div>
         </div>
         <div class="overlap-group">
-          <img class="img" src="img/rectangle-28.png" />
-          <img class="rectangle-3" src="img/rectangle-29.png" />
-          <img class="rectangle-4" src="img/rectangle-30.png" />
+          <img class="img" src="img/rectangle-28.png" alt="new" />
+          <img class="rectangle-3" src="img/rectangle-29.png" alt="new" />
+          <img class="rectangle-4" src="img/rectangle-30.png" alt="new" />
         </div>
-        <img class="rectangle-5" src="img/rectangle-65.png" />
+        <img class="rectangle-5" src="img/rectangle-65.png" alt="new" />
         <div class="text-wrapper-2">The Crystal Ballroom</div>
         <img class="location" src="img/location-1.svg" alt="new" />
         <p class="p">Lorem ipsum road, Tantruim-2322, Melbourne, Australia</p>
         <div class="group">
           <div class="text-wrapper-3">4.5 (1200 Reviews)</div>
-          <img class="group-2" src="img/group-5.png" />
+          <img class="group-2" src="img/group-5.png" alt="new" />
         </div>
         <div class="overlap-2">
           <div class="text-wrapper-4">Top facilities</div>
@@ -118,7 +118,7 @@
           <div class="frame-10">
             <div class="text-wrapper-13">Reserve suite</div>
           </div>
-          <img class="rectangle-6" src="img/rectangle-70.png" />
+          <img class="rectangle-6" src="img/rectangle-70.png" alt="new" />
           <p class="text-wrapper-14">Standard twin ben, Multiple beds</p>
         </div>
         <div class="overlap-5">
@@ -139,7 +139,7 @@
           <div class="frame-12">
             <div class="text-wrapper-13">Reserve suite</div>
           </div>
-          <img class="rectangle-7" src="img/rectangle-71.png" />
+          <img class="rectangle-7" src="img/rectangle-71.png" alt="new" />
           <p class="text-wrapper-15">Standard twin ben, 1 Queen bed</p>
         </div>
         <div class="text-wrapper-16">Explore the area</div>
@@ -252,7 +252,7 @@
                 </div>
               </div>
             </div>
-            <img class="image" src="img/image.png" />
+            <img class="image" src="img/image.png" alt="new" />
           </div>
         </footer>
         <div class="div-2">
