User Type Completed

--- a/Pages/Login/LoginUser.html
+++ b/Pages/Login/LoginUser.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
     <link rel="stylesheet" href="../Login-Admin/globals.css" />
     <link rel="stylesheet" href="../Login-Admin/styleguide.css" />
     <link rel="stylesheet" href="../Login-Admin/style.css" />
