Delete readme.txt, modify party.sql and connectin.php, and update index.html and LoginUser.html

--- a/Pages/Login-Admin/index.html
+++ b/Pages/Login-Admin/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    // Added viewport meta element
     <link rel="stylesheet" href="globals.css" />
     <link rel="stylesheet" href="styleguide.css" />
     <link rel="stylesheet" href="style.css" />
@@ -47,6 +46,7 @@
                         placeholder="Enter your Email"
                         type="email"
                         name="email"
+                        style="border:none;"
                       />
                     </div>
                     <div class="rectangle"></div>
@@ -63,9 +63,10 @@
                     <div class="group-11">
                       <div class="text-wrapper-7">
                         <input
-                          placeholder="Luke I am your father"
+                          placeholder="Enter Your Password"
                           type="password"
                           name="password"
+                          style="border:none;"
                         />
                       </div>
                       <img
