--- a/Pages/Login/LoginUser.html
+++ b/Pages/Login/LoginUser.html
@@ -52,6 +52,7 @@
                         placeholder="Enter your UserName"
                         type="text"
                         name="username"
+                        style="border:none;"
                       />
                     </div>
                     <div class="rectangle"></div>
@@ -71,6 +72,7 @@
                           placeholder="Enter your Password"
                           type="password"
                           name="password"
+                          style="border:none;"
                         />
                       </div>
                       <img
