--- a/Pages/UserType/index.html
+++ b/Pages/UserType/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>PartyPRO Dashboard</title>
     <style>
-      /* Inline CSS for brevity */
       body {
-        font-family: "Arial", sans-serif;
+        font-family: "Poppins", sans-serif;
         background-color: #39004b; /* or the exact color from your design */
         color: white;
         display: flex;
@@ -37,8 +37,8 @@
         flex-direction: row;
       }
       a {
-        color: inherit; /* Blue color is the default for links */
-        text-decoration: none; /* No underline */
+        color: inherit;
+        text-decoration: none;
       }
     </style>
   </head>
