--- a/Pages/Register-Ordinary/index.html
+++ b/Pages/Register-Ordinary/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    // Add viewport meta element
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
     <link rel="stylesheet" href="globals.css" />
     <link rel="stylesheet" href="styleguide.css" />
     <link rel="stylesheet" href="style.css" />
+
+
   </head>
   <body>
     <div class="register-ordinary">
@@ -15,13 +15,13 @@
         <div class="overlap">
           <div class="group"><div class="group-2"></div></div>
           <div class="back-to-website">
-            <div class="text-wrapper">Back to the website</div>
-            <img
-              class="icon-left"
-              src="img/icon-left.svg"
-              alt="new"
-              alt="new"
-            />
+            <div class="text-wrapper">
+              <a href="../Home/index.html" style="color: aliceblue;">
+                Back to the website
+              </a>
+              
+            </div>
+            <img class="icon-left" src="img/icon-left.svg" alt="new" />
           </div>
         </div>
         <div class="group-3">
@@ -32,25 +32,25 @@
                 <p class="p">If you already have an account register</p>
                 <p class="you-can-login-here">
                   <span class="span">You can&nbsp;&nbsp; </span>
-                  <span class="text-wrapper-3">Login here !</span>
+                  <span class="text-wrapper-3">
+                    <a href="../Login/LoginUser.html">
+                      Login here !
+                    </a>
+                  </span>
                 </p>
               </div>
             </div>
             <div class="group-6">
-              <div class="text-wrapper-4">Email</div>
+              <div class="text-wrapper-4">Username</div>
               <input
                 class="text-wrapper-5"
                 placeholder="Enter your Email"
                 type="text"
                 name="email"
+                style="border:none;"
               />
               <div class="rectangle"></div>
-              <img
-                class="message"
-                src="img/message-1.svg"
-                alt="new"
-                alt="new"
-              />
+              <img class="message" src="img/message-1.svg" alt="new" />
             </div>
             <div class="group-7">
               <div class="text-wrapper-6">Confrim Password</div>
@@ -61,13 +61,9 @@
                   placeholder="Confrim Your Password"
                   type="password"
                   name="cpassword"
+                  style="border:none;"
                 />
-                <img
-                  class="padlock"
-                  src="img/padlock-1-1.svg"
-                  alt="new"
-                  alt="'new"
-                />
+                <img class="padlock" src="img/padlock-1-1.svg" alt="'new" />
               </div>
             </div>
             <div class="group-9">
@@ -79,13 +75,14 @@
                   placeholder="Enter your Password"
                   type="password"
                   name="password"
+                  style="border:none;"
                 />
-                <img class="img" src="img/padlock-1.svg" alt="new" alt="new" />
+                <img class="img" src="img/padlock-1.svg" alt="new" />
               </div>
             </div>
             <div class="overlap-group-wrapper">
               <button type="submit" class="overlap-group">
-                <div class="text-wrapper-10">Login</div>
+                <div class="text-wrapper-10" style="color: aliceblue; font-size: x-large;">Login</div>
               </button>
             </div>
             <div class="overlap-wrapper">
@@ -97,15 +94,18 @@
                     placeholder="Enter your User Name"
                     type="text"
                     name="username"
+                    style="border:none;"
                   />
                   <div class="rectangle-3"></div>
                 </div>
-                <img class="user" src="img/user-1.svg" alt="new" alt="" new />
+                <img class="user" src="img/user-1.svg" alt="" new />
               </div>
             </div>
           </form>
         </div>
       </div>
     </div>
+
+    
   </body>
 </html>
