--- a/Pages/Login-Admin/index.html
+++ b/Pages/Login-Admin/index.html
@@ -15,7 +15,7 @@
           <div class="group"><div class="group-2"></div></div>
           <div class="back-to-website">
             <div class="text-wrapper">
-              <a href="www.google.com" style="color: whitesmoke"
+              <a href="../Home/index.html style="color: whitesmoke"
                 >Back to the website</a
               >
             </div>
@@ -36,16 +36,16 @@
                 <div class="text-wrapper-3">and the password</div>
               </div>
             </div>
-            <form>
+            <form action="../../Backend/adminlogin.php" method="post">
               <div class="group-7">
                 <div class="group-8">
                   <div class="group-9">
                     <div class="text-wrapper-4">Email</div>
                     <div class="text-wrapper-5">
                       <input
-                        placeholder="Enter your Email"
-                        type="email"
-                        name="email"
+                        placeholder="Enter your Username"
+                        type="text"
+                        name="username"
                         style="border:none;"
                       />
                     </div>
@@ -80,9 +80,9 @@
                 </div>
                 <div class="group-12"></div>
                 <div class="overlap-group-wrapper">
-                  <div class="overlap-group">
+                  <button type="submit" class="overlap-group">
                     <div class="text-wrapper-10">Login</div>
-                  </div>
+                  </button>
                 </div>
               </div>
             </form>
