--- a/Pages/Login-Admin/index.html
+++ b/Pages/Login-Admin/index.html
@@ -15,7 +15,7 @@
           <div class="group"><div class="group-2"></div></div>
           <div class="back-to-website">
             <div class="text-wrapper">
-              <a href="../Home/index.html style="color: whitesmoke"
+              <a href="../UserType/index.html" style="color: whitesmoke"
                 >Back to the website</a
               >
             </div>
@@ -46,7 +46,7 @@
                         placeholder="Enter your Username"
                         type="text"
                         name="username"
-                        style="border:none;"
+                        style="border: none"
                       />
                     </div>
                     <div class="rectangle"></div>
@@ -66,7 +66,7 @@
                           placeholder="Enter Your Password"
                           type="password"
                           name="password"
-                          style="border:none;"
+                          style="border: none"
                         />
                       </div>
                       <img
