--- a/Pages/UserType/index.html
+++ b/Pages/UserType/index.html
@@ -51,7 +51,7 @@
         />
         <h2 style="padding-top: 30px">Party Planner</h2>
       </a>
-      <a href="../Login-Admin//index.html" class="card">
+      <a href="../Login-Admin/index.html" class="card">
         <img
           src="img/woman-connects-a-laptop-to-the-server.png"
           alt="Administrator"
