Update copyright line image alt attribute

--- a/Pages/Addvendors/index.html
+++ b/Pages/Addvendors/index.html
@@ -14,7 +14,7 @@
             <div class="background"></div>
             <img class="img" src="img/background.svg" />
             <div class="copyright">
-              <img class="line" src="img/line.svg" />
+              <img class="line" src="img/line.svg" alt="new" />
               <div class="copyright-partypro-wrapper">
                 <p class="copyright-partypro">
                   <span class="text-wrapper">Copyright © PartyPRO | Designed by XXX - Powered by XXX.</span>
