Update alt text for vector image

--- a/Pages/Addvendors/index.html
+++ b/Pages/Addvendors/index.html
@@ -52,7 +52,7 @@
                       ><input class="email-contact" placeholder="Email&lt;br/&gt;contact@partyprocom" type="email"
                     /></a>
                     <div class="icon">
-                      <div class="vector-wrapper"><img class="vector" src="img/vector-1.svg" /></div>
+                      <div class="vector-wrapper"><img class="vector" src="img/vector-1.svg" alt="new" /></div>
                     </div>
                   </div>
                   <div class="call">
