Update alt attribute for vector image

--- a/Pages/Addvendors/index.html
+++ b/Pages/Addvendors/index.html
@@ -57,7 +57,7 @@
                   </div>
                   <div class="call">
                     <p class="call-us">Call Us <br />(00) 112 365 489</p>
-                    <div class="icon"><img class="vector-2" src="img/vector.svg" /></div>
+                    <div class="icon"><img class="vector-2" src="img/vector.svg" alt="new" /></div>
                   </div>
                 </div>
               </div>
