Add alt attribute to image tag

--- a/Pages/Addvendors/index.html
+++ b/Pages/Addvendors/index.html
@@ -62,7 +62,7 @@
                 </div>
               </div>
             </div>
-            <img class="image" src="img/image.png" />
+            <img class="image" src="img/image.png" alt="new" />
           </div>
         </footer>
         <div class="div-2">
