--- a/Pages/Dashboardnew/index.html
+++ b/Pages/Dashboardnew/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="globals.css" />
     <link rel="stylesheet" href="styleguide.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/x-icon" href="../../Include/favicon-icon.svg">
   </head>
   <body>
     <div class="DASHBOARD">
