--- a/Pages/Login/LoginUser.html
+++ b/Pages/Login/LoginUser.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/x-icon" href="../../Include/favicon-icon.svg">
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <link rel="stylesheet" href="../Login-Admin/globals.css" />
     <link rel="stylesheet" href="../Login-Admin/styleguide.css" />
